@@ -15,6 +15,7 @@
  */
 package io.airlift.http.server;
 
+import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableSet;
 import com.google.common.io.Files;
 import com.google.common.net.HostAndPort;
@@ -285,21 +286,30 @@ public class TestHttpServerProvider
                 .setHttpsPort(0)
                 .setKeystorePath(getResource("test.keystore.with.two.passwords").getPath())
                 .setKeystorePassword("airlift")
-                .setKeyManagerPassword("airliftkey");
+                .setKeyManagerPassword("airliftkey")
+                .setAutomaticHttpsSharedSecret("shared-secret");
 
         createAndStartServer();
 
         HttpClientConfig http1ClientConfig = new HttpClientConfig()
                 .setHttp2Enabled(false)
                 .setTrustStorePath(getResource("test.truststore").getPath())
-                .setTrustStorePassword("airlift");
+                .setTrustStorePassword("airlift")
+                .setAutomaticHttpsSharedSecret("shared-secret")
+                .setNodeEnvironment("test");
 
         try (JettyHttpClient httpClient = new JettyHttpClient(http1ClientConfig)) {
-            StatusResponse response = httpClient.execute(prepareGet().setUri(httpServerInfo.getHttpsUri()).build(), createStatusResponseHandler());
-
-            assertEquals(response.getStatusCode(), HttpServletResponse.SC_OK);
-            assertEquals(response.getHeader("X-Protocol"), "HTTP/1.1");
+            verifyUri(httpClient, URI.create("https://localhost:" + httpServerInfo.getHttpsUri().getPort()));
+            verifyUri(httpClient, URI.create("https://127.0.0.1:" + httpServerInfo.getHttpsUri().getPort()));
         }
+    }
+
+    private void verifyUri(JettyHttpClient httpClient, URI uri)
+    {
+        StatusResponse response = httpClient.execute(prepareGet().setUri(uri).build(), createStatusResponseHandler());
+
+        assertEquals(response.getStatusCode(), HttpServletResponse.SC_OK);
+        assertEquals(response.getHeader("X-Protocol"), "HTTP/1.1");
     }
 
     @Test
@@ -395,7 +405,8 @@ public class TestHttpServerProvider
                 .setHttpsEnabled(true)
                 .setHttpsPort(0)
                 .setKeystorePath(getResource("clientcert-java/server.keystore").getPath())
-                .setKeystorePassword("airlift");
+                .setKeystorePassword("airlift")
+                .setAutomaticHttpsSharedSecret("shared-secret");
         clientCertificate = ClientCertificate.REQUIRED;
 
         createAndStartServer(createCertTestServlet());
@@ -404,15 +415,20 @@ public class TestHttpServerProvider
                 .setKeyStorePath(getResource("clientcert-java/client.keystore").getPath())
                 .setKeyStorePassword("airlift")
                 .setTrustStorePath(getResource("clientcert-java/client.truststore").getPath())
-                .setTrustStorePassword("airlift");
+                .setTrustStorePassword("airlift")
+                .setAutomaticHttpsSharedSecret("shared-secret")
+                .setNodeEnvironment("test");
 
         try (JettyHttpClient httpClient = new JettyHttpClient(clientConfig)) {
-            StringResponse response = httpClient.execute(
-                    prepareGet().setUri(httpServerInfo.getHttpsUri()).build(),
-                    createStringResponseHandler());
+            for (String host : ImmutableList.of("localhost", "127.0.0.1")) {
+                URI uri = URI.create("https://" + host + ":" + httpServerInfo.getHttpsUri().getPort());
+                StringResponse response = httpClient.execute(
+                        prepareGet().setUri(uri).build(),
+                        createStringResponseHandler());
 
-            assertEquals(response.getStatusCode(), HttpServletResponse.SC_OK);
-            assertEquals(response.getBody(), "CN=testing,OU=Client,O=Airlift,L=Palo Alto,ST=CA,C=US");
+                assertEquals(response.getStatusCode(), HttpServletResponse.SC_OK);
+                assertEquals(response.getBody(), "CN=testing,OU=Client,O=Airlift,L=Palo Alto,ST=CA,C=US");
+            }
         }
     }
 
