@@ -2,6 +2,7 @@
 
 - Fix spurious reload of HTTP server SSL context after start.
 - Fix support for SNI for single label domains and IP addresses.
+- Add automatic HTTPS configuration.
 - Deprecate ConfigurationModule.installModules.
 - Deprecate ConditionalModule.installModuleIf and introduce
   ConditionalModule.conditionalModule.
